# ai-juypter

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile.ci  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
.jupyter/: jupyter_ai_config.py
notebooks/: 01_ai_data_analysis.ipynb
src/ai_client/: __init__.py  client.py  config.py  exceptions.py  models.py
tests/: test_client.py  test_config.py  test_models.py
